fix stretch img activites

--- a/style.css
+++ b/style.css
@@ -319,10 +319,10 @@ body {
 .parentImgActivite {
   display: flex;
 }
-#imgActivites {
-  display: flex;
-  width: 100px;
-  height: 100px;
+.imgActivites {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #footer {
